Instucciones en ingles

--- a/Thingsboard/descarga_thingsboard/config.ini
+++ b/Thingsboard/descarga_thingsboard/config.ini
@@ -1,11 +1,11 @@
-; Reemplaza las XXXXXXXXXXX por los datos requeridos
+; Reemplaza las XXXXXXXXXXX por los datos requeridos  / Replace the XXXXXXXXXXXXXXX by the required data
 
-[XXXXXXXXXXX] ;Nombre para referirte al dispositivo
-token     = XXXXXXXXXXX  ;Token del dispositivo
-device_id = XXXXXXXXXXX  ;ID del dispositivo
-tenant    = XXXXXXXXXXX  ;Cuenta de thigsboard
-password  = XXXXXXXXXXX  ;Clave de la cuenta
-host      = XXXXXXXXXXX  ;Servidor de thingsboard
-port      = XXXXXXXXXXX  ;Puerto
+[XXXXXXXXXXX] ;Nombre para referirte al dispositivo   / Name to refer to the device
+token     = XXXXXXXXXXX  ;Token del dispositivo       / Device Token
+device_id = XXXXXXXXXXX  ;ID del dispositivo          / Device ID
+tenant    = XXXXXXXXXXX  ;Cuenta de thigsboard        / Thingsboard account
+password  = XXXXXXXXXXX  ;Clave de la cuenta          / Account password
+host      = XXXXXXXXXXX  ;Servidor de thingsboard     / Thingsboard server
+port      = XXXXXXXXXXX  ;Puerto                      / Port
 
 
